[project]
name = "api-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "taskipy>=1.14.1",
    "uvicorn>=0.34.0",
]
[tool.taskipy.tasks]

run = "uvicorn main:app --reload"
test = "pytest -v testes.py"
kill = "kill -9 $(lsof -t -i:8000)"
